--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,16 @@
 	<groupId>tpSuperior</groupId>
 	<artifactId>tpSuperior</artifactId>
 	<version>1-SNAPSHOT</version>
+	<properties>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
 	<dependencies>
+		<dependency>
+    		<groupId>net.objecthunter</groupId>
+   			<artifactId>exp4j</artifactId>
+    		<version>0.4.8</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
